data/issues_nolabel/nolabel_test_345.txt
conv_grad_ops.cc:623:46: error: invalid use of 'auto'

I'm getting a compile error when trying to compile the example_trainer using gcc 4.8.1:
$ bazel build -c opt --config=cuda //tensorflow/cc:tutorials_example_trainer  --verbose_failures 
____From Compiling tensorflow/core/kernels/conv_grad_ops.cc:
tensorflow/core/kernels/conv_grad_ops.cc: In instantiation of 'tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; T = float]
::__lambda3':
tensorflow/core/kernels/conv_grad_ops.cc:621:22:   required from 'struct tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; 
T = float]::__lambda3'
tensorflow/core/kernels/conv_grad_ops.cc:632:7:   required from 'void tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; T =
 float]'
tensorflow/core/kernels/conv_grad_ops.cc:1265:1:   required from here
tensorflow/core/kernels/conv_grad_ops.cc:621:56: error: use of 'tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; T = float]::__lambda3::__col_buffer_data' before deduction of 'auto'
                     &size_A](int64 start, int64 limit) {
                                                        ^
tensorflow/core/kernels/conv_grad_ops.cc:621:56: error: use of 'tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; T = float]::__lambda3::__col_buffer_data' before deduction of 'auto'
tensorflow/core/kernels/conv_grad_ops.cc:621:56: error: use of 'tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; T = float]::__lambda3::__input_data' before deduction of 'auto'
tensorflow/core/kernels/conv_grad_ops.cc:621:56: error: use of 'tensorflow::Conv2DCustomBackpropFilterOp<Device, T>::Compute(tensorflow::OpKernelContext*) [with Device = Eigen::ThreadPoolDevice; T = float]::__lambda3::__input_data' before deduction of 'auto'
tensorflow/core/kernels/conv_grad_ops.cc:623:46: error: use of 'input_data' before deduction of 'auto'
           auto input_data_shard = input_data + shard_id * input_offset;
                                              ^
tensorflow/core/kernels/conv_grad_ops.cc:623:46: error: invalid use of 'auto'